force-app/main/default/objects/Campaign/fields/AssignTo__c.field-meta.xml
<CustomField>
    <fullName>AssignTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who should leads part of this campaign be automatically assigned to, if there is a case for this.</description>
    <inlineHelpText>Contact Cian for support. In some cases, leads will be automatically attributed to this person.</inlineHelpText>
    <label>Assign to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>