force-app/main/default/objects/Campaign/fields/CalendlySlug__c.field-meta.xml
<CustomField>
    <fullName>CalendlySlug__c</fullName>
    <description>For leads created from Calendly with a slug in this field, they should be attributed to this campaign.</description>
    <inlineHelpText>Contact Cian for support. Any lead created with this slug will be attributed to this campaign automatically.</inlineHelpText>
    <label>Calendly Slug</label>
    <length>255</length>
    <type>Text</type>
</CustomField>