force-app/main/default/objects/Campaign/fields/EmailDomain__c.field-meta.xml
<CustomField>
    <fullName>EmailDomain__c</fullName>
    <description>For leads that are created with an email containing this domain, they should be attributed to this campaign automatically.</description>
    <label>Email domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>