force-app/main/default/objects/Campaign/fields/OW_account__c.field-meta.xml
<CustomField>
    <fullName>OW_account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Allows this campaign to be linked to a company for whom we are running a campaign. Added as part of the work to set us up to manage mortgage roll outs to firms we work with.</description>
    <inlineHelpText>Please specify the company we are running this campaign for if applicable - e.g. who are we doing a mortgage rollout for.</inlineHelpText>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The account chosen here must be of record type business. 

(Admin note: OW_company field on the Campaign object)</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>OW_business</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>