force-app/main/default/objects/Campaign/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>The lead source that should be applied if a lead is created without a source and then gets linked to this campaign.</description>
    <inlineHelpText>If a lead is created without a source and linked to this campaign, what lead source should be applied.</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YouTube</fullName>
            </value>
            <value>
                <fullName>MoneyCoach Rollout</fullName>
            </value>
            <value>
                <fullName>MoneyCoach Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>