force-app/main/default/objects/Campaign/recordTypes/ServiceTracking.recordType-meta.xml
<RecordType>
    <fullName>ServiceTracking</fullName>
    <active>true</active>
    <description>Used for tracking of service interaction.</description>
    <label>Service Tracking</label>
</RecordType>