force-app/main/default/objects/Campaign/listViews/OW_Mortgage_rollouts.listView-meta.xml
<ListView>
    <fullName>OW_Mortgage_rollouts</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>OW_account__c</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>equals</operation>
        <value>Mortgage rollout</value>
    </filters>
    <label>Mortgage rollouts</label>
</ListView>